--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,1 +1,62 @@
-<p>test works!</p>
+<section class="vh-100" style="background-color: #eee;">
+  <div class="container py-2 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-lg-9 col-xl-9">
+        <div class="card rounded-3">
+          <div class="card-body p-5">
+
+            <h4 class="text-center my-3 pb-3">To Do App</h4>
+
+            <form class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2" (ngSubmit)="addTask()">
+              <div class="col-12">
+                <div class="form-outline">
+                  <input type="text" id="form1" class="form-control" [(ngModel)]="task.todoName" name="todoName"/>
+                  <label class="form-label" for="form1">Enter a task here</label>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <button type="submit" class="btn btn-primary">Save</button>
+              </div>
+
+            </form>
+
+            <table class="table mb-4">
+              <thead>
+                <tr>
+                  <th scope="col">No.</th>
+                  <th scope="col">Todo item</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Actions</th>
+                </tr>
+              </thead>
+              <tbody *ngFor="let item of tasks">
+
+                <tr>
+                  <th scope="row">1</th>
+                  <td *ngIf="!item.status">{{item.todoName}}</td>
+                  <td *ngIf="item.status"><s> {{item.todoName}} </s></td>
+                  <!-- {{item.status}} -->
+                  <td *ngIf="!item.status">In progress</td>
+                  <td *ngIf="item.status">Completed</td>
+                  <td>
+                    <form (click)="deleteTask(item)">
+                      <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                  </td>
+                  <td>
+                    <form (click)="finish(item)">
+                      <button *ngIf="!item.status" type="submit" class="btn btn-success ms-1">Finished</button>
+                    </form>
+                  </td>
+                </tr>
+
+              </tbody>
+            </table>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
